experiments with celery, celery-beat
